# screenshot-summary

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  todo.txt
src/: disk_cache.py  scene_detector.py  time_extractors.py  video_cropping.py  video_extractor.py
