[project]
name = "screenshot-summary"
version = "0.1.0"
description = "Summarize a video by taking screenshots in crucial places."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click==8.2.1",
    "decorator==5.2.1",
    "imageio==2.37.0",
    "imageio-ffmpeg==0.6.0",
    "moviepy==2.2.1",
    "numpy==2.2.6",
    "opencv-python==4.12.0.88",
    "pillow==11.3.0",
    "platformdirs==4.3.8",
    "proglog==0.1.12",
    "python-dotenv==1.1.1",
    "scenedetect==0.6.6",
    "tqdm==4.67.1",
]
